--- a/tests/integration/data-simple/templates/homepage.html
+++ b/tests/integration/data-simple/templates/homepage.html
@@ -6,7 +6,7 @@
   <h1>Home page</h1>
   <ul>
     {% for post in posts %}
-      <li><a href="{% url "post", post %}"{{ post.title }}</a></li>
-    {% endfor }
+      <li><a href="{% url "posts", post %}">{{ post.title }}</a></li>
+    {% endfor %}
   </ul>
 {% endblock %}
