--- a/tests/integration/data-simple/templates/homepage.html
+++ b/tests/integration/data-simple/templates/homepage.html
@@ -4,6 +4,9 @@
 
 {% block content %}
     <h1>Home page</h1>
+    <div class="site-summary">
+        {{ site_summary }}
+    </div>
     <ul>
         {% for post in posts %}
             <li><a href="{% url "posts", post %}">{{ post.title }}</a></li>
