--- a/tests/integration/data-simple/templates/homepage.html
+++ b/tests/integration/data-simple/templates/homepage.html
@@ -21,4 +21,8 @@
             {% endfor %}
         </ul>
     </div>
+
+    <div class="download">
+        <a href="{% asset "testfile.txt" %}">Click here to download the test file</a>
+    </div>
 {% endblock %}
