--- a/tests/integration/data-simple/templates/overlap.html
+++ b/tests/integration/data-simple/templates/overlap.html
@@ -3,15 +3,10 @@
 {% block title %}Overlap Test{% endblock %}
 
 {% block content %}
-    <h1>Overlap Test</h1>
-
-    {% if posts %}
-        {% for post in posts %}
-            <div class="post">
-                {{ post.title }}
-            </div>
-        {% endfor %}
+    {% if post %}
+        <h1>{{ post.title }}</h1>
     {% else %}
+        <h1>Overlap Test</h1>
         <p>No posts here</p>
     {% endif %}
 {% endblock %}
