--- a/tests/integration/data-themed/themes/theme1/templates/home.html
+++ b/tests/integration/data-themed/themes/theme1/templates/home.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home - Theme 1</title>
+    <title>{% block title %}Home - Theme 1{% endblock %}</title>
     <link rel="stylesheet" type="text/css" media="all" href="{% asset "theme1.css" %}" />
 </head>
 <body>
+    {% block body %}{% endblock %}
 </body>
 </html>
