--- a/tests/integration/data-themed/themes/theme2/templates/home.html
+++ b/tests/integration/data-themed/themes/theme2/templates/home.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home - Theme 2</title>
+    <title>{% block title %}Home - Theme 2{% endblock %}</title>
     <link rel="stylesheet" type="text/css" media="all" href="{% asset "theme2.css" %}" />
 </head>
 <body>
+    {% block body %}{% endblock %}
 </body>
 </html>
