Add basic Netlify support

--- a/examples/blog/templates/base.html
+++ b/examples/blog/templates/base.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}{% if page_title %}{{ page_title }}{% else %}My Blog{% endif %}{% endblock %}</title>
+    <style type="text/css" media="all">
+    body {
+        font-family: Helvetica, Arial, Tahoma;
+    }
+    </style>
 </head>
 <body>
     <div class="container">
